--- a/model/src/model_building.ipynb
+++ b/model/src/model_building.ipynb
@@ -1220,6 +1220,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "eadc5f6f-e0f6-4b32-ad6e-1c8e53555f51",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ls97k\\miniconda3\\lib\\site-packages\\sklearn\\base.py:464: UserWarning: X does not have valid feature names, but GradientBoostingRegressor was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([564.11842774])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_model.predict([[8, 1, 0, 1000, 128, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "326833b6-951b-4c50-b340-9f16bc6c955b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "id": "0b5aae80-3dbc-451b-b34a-6ba1a8dda38d",
    "metadata": {
@@ -1661,6 +1700,14 @@
    "source": [
     "X_test"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b99092d-a43e-4fd1-b504-fec0f49ae2e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
